--- a/styl.css
+++ b/styl.css
@@ -12,6 +12,7 @@ header{
     font-size: 18px; 
     letter-spacing: 1.1px; 
     text-decoration: underline;
+    text-transform: uppercase;
 }
 .synek:hover{
     color: blue;
